2007-04-25  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4406]
	* iconv/gconv_charset.h (strip): Allow ':'
	* iconv/iconv_open.c (iconv_open): Adjust comment.

2007-04-23  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4405]
	* iconvdata/gconv-modules (E13B): Add a missing slash to the alias
	name.  Patch by Aurelien Jarno <aurelien@aurel32.net>.

2007-04-23  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4381]
	* nss/nss_files/files-hosts.c (HOST_DB_LOOKUP): Ensure sufficient
	alignment of buffer and tmp_buffer.
	* nis/nss_nis/nis-hosts.c (internal_nis_gethostent_r,
	internal_gethostbyname2_r, _nss_nis_gethostbyaddr_r): Ensure sufficient
	alignment of buffer.
	* resolv/nss_dns/dns-hosts.c (getanswer_r): Likewise.  Handle buflen
	bigger than INT_MAX.
	* resolv/nss_dns/dns-network.c (getanswer_r): Likewise.  Add errnop and
	h_errnop arguments.  Fail if buflen is too small.
	(_nss_dns_getnetbyname_r, _nss_dns_getnetbyaddr_r): Adjust callers.

2007-04-19  Ulrich Drepper  <drepper@redhat.com>

	* include/sys/mman.h: Mark madvise hidden.
	* misc/madvise.c: Add libc_hidden_def.

2007-04-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4368]
	* stdlib/stdlib.h: Remove obsolete part of comment for realpath.

2007-04-16  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4364]
	* posix/unistd.h (_XOPEN_VERSION): Define appropriately for SUSv3.

2007-04-13  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4344]
	* elf/ldconfig.c (search_dir): Fix 2 off-by-2 errors.
	Reported by David Anderson <davea42@earthlink.net>.

2007-04-13  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/printf_fp.c (___printf_fp): Fix exponent -4
	special case handling when wcp == wstartp + 1.  Fix a comment typo.
	* stdio-common/tfformat.c (sprint_doubles): Add a new testcase.

2007-02-21  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4070]
	* stdio-common/printf_fp.c (___printf_fp): Handle a few more
	special cases.
	* stdio-common/tfformat.c (sprint_doubles): Some more tests.

2007-02-19  Ulrich Drepper  <drepper@redhat.com>
